@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.86 2003/12/08 09:30:05 jaco Exp $
+# $Id: CHANGELOG,v 1.87 2003/12/12 15:36:30 jaco Exp $
 
 * Sun, Dec 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -93,6 +93,7 @@
         first, then the cloop image, then the rest
       - Copy inittab and /sbin/halt to it, to enable the eject of
         the CD at shutdown
+      - Create compressed iso MD5 and store it on the iso
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
     [rc.sysinit]:
